[package]
name = "stm32f1-examples"
version = "0.1.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3.8", optional = true }
defmt-rtt= "0.4"
panic-probe = "0.3.2"
nb = "1.1.0"
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", version = "0.10.0",  features = ["stm32f103"] }


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"

[dev-dependencies]
embedded-graphics = "0.7.1"
defmt = { version = "0.3.8"}
defmt-rtt= "0.4"
ssd1306 = "0.7.1"
panic-halt = "0.2"
heapless = "0.7.16"
bme280 = "0.5.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"